# edge-llama

./: .gitignore  CMakeLists.txt  README.md  edge_native.py  flato  flato.c  fleet-agent  fleet-agent.c  full_forward.cpp  jc1-research-agent.py  plato-server.service  plato-sync.py  plato-synthesizer.py  sensor-pipeline.py  sensor-pipeline.service  sensor-pipeline.timer  test_edge  test_edge.cpp  true_lambda.py  warp-room.service  warp-room.timer  warp_room.py
docs/: old-school-machine-wisdom.md
messages/: README.md
src/: backend_inference.cpp  backend_inference.h  edge-cuda-impl.cpp  edge-cuda.c  edge-cuda.h  engine.cpp  engine.h  ggml_inference.cpp  ggml_inference.h  ggml_ops.cpp  ggml_ops.h  gguf_loader.cpp  gguf_loader.h  main.cpp  model_qwen2.cpp  model_qwen2.h  server.cpp  server.h  tokenizer.h
